# health_gamification

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Health_Test_Mapping (1) - Test Mapping.csv  LICENSE  PRD_Gamification.md  README.md  config.py  fastmcp.json  ping_gemini.py  pyproject.toml  sample_organ_data.json  seed.py  server.py
agent/: assembler.py  loop.py  mcp_tools.py  prompts.py  runner.py  tools.py
apps/: charts.py  dashboard.py  ingest.py  inspector.py  organ_panel.py  query.py  quests.py  rag_retriever.py  recommendations.py
core/: models.py  organs.py  parser.py  scorer.py
data/: organ_map.json  reference_ranges.json
db/: store.py  turso.py
docs/superpowers/plans/: 2026-05-12-healthquest-phase1.md  2026-05-12-rag-pipeline.md  2026-05-16-pydantic-parallel-agent-tools.md  2026-05-21-custom-web-ui.md
docs/superpowers/specs/: 2026-05-12-goal-view-plan-recommendations-design.md  2026-05-12-healthquest-design.md  2026-05-12-rag-pipeline-design.md  2026-05-16-custom-ui-design.md  2026-05-16-pydantic-parallel-agent-tools-design.md
llm/: gemini.py
scripts/excercise_diet_reco/: build_corpus.py  polish_pages.py  reco_plan.md
scripts/excercise_diet_reco/harvard_nutrition/: scraping_script.py
tests/: test_agent_mcp_tools.py  test_build_corpus.py  test_gemini_parallel.py  test_get_dashboard_json.py  test_ingest.py  test_models.py  test_organs.py  test_parser.py  test_rag_retriever.py  test_scorer.py  test_store.py
ui/: agent.html  dashboard.html  goals.html  index.html  mcp-client.js
(+59 files in other folders)
