[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthquest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.2",
    "prefab-ui>=0.19.1",
    "pdfplumber>=0.11",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "libsql-experimental>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "db", "llm", "apps", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
