[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthquest"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp[apps]>=3.2",
    "prefab-ui>=0.19.1",
    "pdfplumber>=0.11",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "haystack-ai>=2.0",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "nltk>=3.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "db", "llm", "apps", "agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
